--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en" ng-app="readingList">
 
 <head>
 
@@ -21,6 +21,7 @@
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+    <script src="https://cdn.firebase.com/js/client/2.2.4/firebase.js"></script>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -31,7 +32,7 @@
 
 </head>
 
-<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top" ng-app="reading-list">
+<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 
     <!-- Navigation -->
     <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
@@ -75,7 +76,7 @@
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <h1 class="brand-heading">Reading List</h1>
-                        <p class="intro-text">A place to keep track of my textual adventures<br>Created by Ty Frith.</p>
+                        <p class="intro-text">A place to keep track of my textual adventures</p>
                         <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
@@ -115,7 +116,10 @@
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>Reading</h2>
-                    <p>This is where I will list book(s) I am currently reading</p>
+                    <p>Books I am currently reading</p>
+                        <ul>
+                            <li>something<button type="button" class="btn btn-default">Finished!</button></li>
+                        </ul>
                    <!--  <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Visit Download Page</a>
          <!-       </div>
             </div>
@@ -127,7 +131,10 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Read</h2>
-                <p></p>
+                <p>Books I've read</p>
+                <ul>
+                    <li>something</li>
+                </ul>
             </div>
         </div>
     </section>
@@ -137,7 +144,7 @@
     <!-- Footer -->
     <footer>
         <div class="container text-center">
-            <p>Copyright &copy; Ty Frith 2015</p>
+            <!-- <p>Copyright &copy; Ty Frith 2015</p> -->
         </div>
     </footer>
 
@@ -163,6 +170,8 @@
    <!--  files -->
 
     <script src="js/app.js"></script>
+    <script src="js/controllers/homeCtrl.js"></script>
+    <script src="js/services/homeService.js"></script>
 
 </body>
 
