--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-    <script src="https://cdn.firebase.com/js/client/2.2.4/firebase.js"></script>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -32,7 +31,7 @@
 
 </head>
 
-<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
+<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top" ng-controller="homeCtrl">
 
     <!-- Navigation -->
     <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
@@ -91,20 +90,14 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>To Read</h2>
-                    <input type="text" placeholder="Title"></input>
-                    <input type="text" placeholder="Author"></input>
-                    <button type="button" class="btn btn-default">Submit</button>
+                    
+                    <input type="text" placeholder="Title" ng-model="title"></input>
+                    <input type="text" placeholder="Author" ng-model="author"></input>
+                    <button type="button" class="btn btn-default" ng-click="addBook()">Submit</button>
 
                 <ul>
                     <li>something<button type="button" class="btn btn-default">Reading!</button></li>
-                    <li>something</li>
-                    <li>something</li>
-                    <li>something</li>
-                    <li>something</li>
-                    <li>something</li>
-                    <li>something</li>
-                    <li>something</li>
-                </ul>
+                 </ul>
       
             </div>
         </div>
@@ -141,6 +134,8 @@
 
 
 
+
+
     <!-- Footer -->
     <footer>
         <div class="container text-center">
@@ -148,9 +143,15 @@
         </div>
     </footer>
 
-    <!-- angular -->
-    <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.11/angular.js"></script>
-    <script src="//code.angularjs.org/1.3.11/angular-route.min.js"></script>
+     <!-- angular -->
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
+    <script src="https://code.angularjs.org/1.3.11/angular-route.min.js"></script>
+
+    <!-- Firebase -->
+    <script src="https://cdn.firebase.com/js/client/2.2.2/firebase.js"></script>
+
+    <!-- AngularFire -->
+    <script src="https://cdn.firebase.com/libs/angularfire/1.0.0/angularfire.min.js"></script>
 
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
@@ -161,18 +162,21 @@
     <!-- Plugin JavaScript -->
     <script src="js/jquery.easing.min.js"></script>
 
-    <!-- Google Maps API Key - Use your own API key to enable the map feature. More information on the Google Maps API can be found at https://developers.google.com/maps/ -->
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRngKslUGJTlibkQ3FkfTxj3Xss1UlZDA&sensor=false"></script>
-
     <!-- Custom Theme JavaScript -->
     <script src="js/grayscale.js"></script>
 
-   <!--  files -->
+   <!--  Files -->
 
     <script src="js/app.js"></script>
+
     <script src="js/controllers/homeCtrl.js"></script>
-    <script src="js/services/homeService.js"></script>
+    <script src="js/services/homeService.js"></script> 
+
+
 
 </body>
 
 </html>
+
+
+
