--- a/index.html
+++ b/index.html
@@ -90,15 +90,17 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>To Read</h2>
-                    
+
                     <input type="text" placeholder="Title" ng-model="title"></input>
                     <input type="text" placeholder="Author" ng-model="author"></input>
                     <button type="button" class="btn btn-default" ng-click="addBook()">Submit</button>
 
                 <ul>
-                    <li>something<button type="button" class="btn btn-default">Reading!</button></li>
+                    <li ng-repeat="book in books"><b>{{book.title}}</b> by {{book.author}}<button type="button" class="btn btn-default" ng-click="readingBook()">Reading!</button></li>
                  </ul>
-      
+ <!--      <div ng-repeat="model in collection track by model.id">
+  {{model.name}}
+</div> -->
             </div>
         </div>
     </section>
@@ -111,7 +113,7 @@
                     <h2>Reading</h2>
                     <p>Books I am currently reading</p>
                         <ul>
-                            <li>something<button type="button" class="btn btn-default">Finished!</button></li>
+                            <li ng-repeat="book in readingBooks"><button type="button" class="btn btn-default">Finished!</button></li>
                         </ul>
                    <!--  <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Visit Download Page</a>
          <!-       </div>
