--- a/index.html
+++ b/index.html
@@ -22,12 +22,11 @@
     <link href="http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
+    <!-- Star rating plugin -->
+
+    <link href="http://netdna.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
+    <link href="path/to/css/star-rating.min.css" media="all" rel="stylesheet" type="text/css" />
+
 
 </head>
 
@@ -75,7 +74,7 @@
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <h1 class="brand-heading">Reading List</h1>
-                        <p class="intro-text">A place to keep track of my textual adventures</p>
+                        <p class="intro-text">A place to keep track of textual adventures</p>
                         <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
@@ -96,7 +95,7 @@
                     <button type="button" class="btn btn-default" ng-click="addBook()">Submit</button>
 
                 <ul>
-                    <li ng-repeat="book in books"><em>{{book.title}}</em> by {{book.author}}<button type="button" class="btn btn-default" ng-click="readingBook(book)">Reading!</button></li>
+                    <li ng-repeat="book in books"><em>{{book.title}}</em> by {{book.author}}<button type="button" class="btn btn-default" ng-click="readingBook(book)">Reading</button></li>
                  </ul>
  <!--      <div ng-repeat="model in collection track by model.id">
   {{model.name}}
@@ -113,7 +112,7 @@
                     <h2>Reading</h2>
                     <p>Books I'm currently reading</p>
                         <ul>
-                            <li ng-repeat="book in readingBooks"><em>{{book.title}}</em> by {{book.author}}<button type="button" class="btn btn-default" ng-click="readBook(book)">Finished!</button></li>
+                            <li ng-repeat="book in readingBooks"><em>{{book.title}}</em> by {{book.author}}<button type="button" class="btn btn-default" ng-click="readBook(book)">Finished</button></li>
                         </ul>
                    <!--  <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Visit Download Page</a>
          <!-       </div>
@@ -172,6 +171,8 @@
 
     <script src="js/app.js"></script>
 
+    <!-- Star rating plugin -->
+
     <script src="js/controllers/homeCtrl.js"></script>
     <script src="js/services/homeService.js"></script> 
 
@@ -180,6 +181,11 @@
 </body>
 
 </html>
+
+<link href="http://netdna.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
+<link href="path/to/css/star-rating.min.css" media="all" rel="stylesheet" type="text/css" />
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+<script src="path/to/js/star-rating.min.js" type="text/javascript"></script>
 
 
 
