--- a/index.html
+++ b/index.html
@@ -22,12 +22,6 @@
     <link href="http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
 
-    <!-- Star rating plugin -->
-
-    <link href="http://netdna.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
-    <link href="path/to/css/star-rating.min.css" media="all" rel="stylesheet" type="text/css" />
-
-
 </head>
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top" ng-controller="homeCtrl">
@@ -84,8 +78,8 @@
         </div>
     </header>
 
-    <!-- About Section -->
-    <section id="about" class="container content-section text-center">
+    <!-- To Read Section -->
+    <section id="to-read" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>To Read</h2>
@@ -104,30 +98,39 @@
         </div>
     </section>
 
-    <!-- Download Section -->
-    <section> <id="download" class="content-section text-center"> 
+    <!-- Reading Section -->
+     <section id="reading" class="content-section text-center"> 
         <div class="download-section">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>Reading</h2>
                     <p>Books I'm currently reading</p>
                         <ul>
-                            <li ng-repeat="book in readingBooks"><em>{{book.title}}</em> by {{book.author}}<button type="button" class="btn btn-default" ng-click="readBook(book)">Finished</button></li>
+                            <li ng-repeat="book in readingBooks"><em>{{book.title}}</em> by {{book.author}} 
+                                <button type="button" class="btn btn-default" ng-click="readBook(book)">Finished</button></li>
                         </ul>
-                   <!--  <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Visit Download Page</a>
-         <!-       </div>
+                    
+                </div>
             </div>
-        </div> -->
+        </div>
     </section> 
 
     <!-- Read Section -->
-    <section id="contact" class="container content-section text-center">
+    <section id="read" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Read</h2>
                 <p>Books I've read</p>
                     <ul>
-                        <li ng-repeat="book in readBooks"><em>{{book.title}}</em> by {{book.author}}</li>
+                        <li ng-repeat="book in readBooks"><em>{{book.title}}</em> by {{book.author}}
+
+                            <span ng-controller="starCtrl" ng-repeat="rating in ratings">{{rating.current}} out of
+                                {{rating.max}}
+                                <div star-rating rating-value="rating.current" max="rating.max" on-rating-selected="getSelectedRating(rating)"></div>
+                            </span>
+
+
+                        </li>
                        <!-- <li>sadasdasdasd</li> -->
                     </ul>
             </div>
@@ -170,22 +173,15 @@
    <!--  Files -->
 
     <script src="js/app.js"></script>
-
-    <!-- Star rating plugin -->
-
     <script src="js/controllers/homeCtrl.js"></script>
     <script src="js/services/homeService.js"></script> 
-
+    <script src="js/controllers/starCtrl.js"></script>
 
 
 </body>
 
 </html>
 
-<link href="http://netdna.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
-<link href="path/to/css/star-rating.min.css" media="all" rel="stylesheet" type="text/css" />
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-<script src="path/to/js/star-rating.min.js" type="text/javascript"></script>
 
 
 
