updated jQuery scroll

--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">To Read</a>
+                        <a class="page-scroll" href="#to-read">To Read</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#download">Reading</a>
+                        <a class="page-scroll" href="#reading">Reading</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">Read</a>
+                        <a class="page-scroll" href="#read">Read</a>
                     </li>
                 </ul>
             </div>
